src/bootstrap/src/core/builder/cli_paths/snapshots/x_bench.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: bench
---
[Bench] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({bench::library/alloc})
    - Set({bench::library/alloctests})
    - Set({bench::library/compiler-builtins/compiler-builtins})
    - Set({bench::library/core})
    - Set({bench::library/coretests})
    - Set({bench::library/panic_abort})
    - Set({bench::library/panic_unwind})
    - Set({bench::library/proc_macro})
    - Set({bench::library/rustc-std-workspace-core})
    - Set({bench::library/std})
    - Set({bench::library/std_detect})
    - Set({bench::library/sysroot})
    - Set({bench::library/test})
    - Set({bench::library/unwind})
[Bench] test::CrateLibrustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::compiler})
    - Set({bench::compiler/redox})
    - Set({bench::compiler/redox_abi})
    - Set({bench::compiler/redox_arena})
    - Set({bench::compiler/redox_ast})
    - Set({bench::compiler/redox_ast_ir})
    - Set({bench::compiler/redox_ast_lowering})
    - Set({bench::compiler/redox_ast_passes})
    - Set({bench::compiler/redox_ast_pretty})
    - Set({bench::compiler/redox_attr_parsing})
    - Set({bench::compiler/redox_baked_icu_data})
    - Set({bench::compiler/redox_borrowck})
    - Set({bench::compiler/redox_builtin_macros})
    - Set({bench::compiler/redox_codegen_llvm})
    - Set({bench::compiler/redox_codegen_ssa})
    - Set({bench::compiler/redox_const_eval})
    - Set({bench::compiler/redox_data_structures})
    - Set({bench::compiler/redox_driver})
    - Set({bench::compiler/redox_driver_impl})
    - Set({bench::compiler/redox_error_codes})
    - Set({bench::compiler/redox_error_messages})
    - Set({bench::compiler/redox_errors})
    - Set({bench::compiler/redox_expand})
    - Set({bench::compiler/redox_feature})
    - Set({bench::compiler/redox_fs_util})
    - Set({bench::compiler/redox_graphviz})
    - Set({bench::compiler/redox_hashes})
    - Set({bench::compiler/redox_hir})
    - Set({bench::compiler/redox_hir_analysis})
    - Set({bench::compiler/redox_hir_id})
    - Set({bench::compiler/redox_hir_pretty})
    - Set({bench::compiler/redox_hir_typeck})
    - Set({bench::compiler/redox_incremental})
    - Set({bench::compiler/redox_index})
    - Set({bench::compiler/redox_index_macros})
    - Set({bench::compiler/redox_infer})
    - Set({bench::compiler/redox_interface})
    - Set({bench::compiler/redox_lexer})
    - Set({bench::compiler/redox_lint})
    - Set({bench::compiler/redox_lint_defs})
    - Set({bench::compiler/redox_llvm})
    - Set({bench::compiler/redox_log})
    - Set({bench::compiler/redox_macros})
    - Set({bench::compiler/redox_metadata})
    - Set({bench::compiler/redox_middle})
    - Set({bench::compiler/redox_mir_build})
    - Set({bench::compiler/redox_mir_dataflow})
    - Set({bench::compiler/redox_mir_transform})
    - Set({bench::compiler/redox_monomorphize})
    - Set({bench::compiler/redox_next_trait_solver})
    - Set({bench::compiler/redox_parse})
    - Set({bench::compiler/redox_parse_format})
    - Set({bench::compiler/redox_passes})
    - Set({bench::compiler/redox_pattern_analysis})
    - Set({bench::compiler/redox_privacy})
    - Set({bench::compiler/redox_proc_macro})
    - Set({bench::compiler/redox_public})
    - Set({bench::compiler/redox_public_bridge})
    - Set({bench::compiler/redox_query_impl})
    - Set({bench::compiler/redox_resolve})
    - Set({bench::compiler/redox_sanitizers})
    - Set({bench::compiler/redox_serialize})
    - Set({bench::compiler/redox_session})
    - Set({bench::compiler/redox_span})
    - Set({bench::compiler/redox_symbol_mangling})
    - Set({bench::compiler/redox_target})
    - Set({bench::compiler/redox_thread_pool})
    - Set({bench::compiler/redox_trait_selection})
    - Set({bench::compiler/redox_traits})
    - Set({bench::compiler/redox_transmute})
    - Set({bench::compiler/redox_ty_utils})
    - Set({bench::compiler/redox_type_ir})
    - Set({bench::compiler/redox_type_ir_macros})
    - Set({bench::compiler/redox_windows_rc})
[Bench] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::src/librustdoc})
    - Set({bench::src/tools/rustdoc})
