src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_compiler.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build compiler
---
[Build] compile::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/redox_abi})
    - Set({build::compiler/redox_arena})
    - Set({build::compiler/redox_ast})
    - Set({build::compiler/redox_ast_ir})
    - Set({build::compiler/redox_ast_lowering})
    - Set({build::compiler/redox_ast_passes})
    - Set({build::compiler/redox_ast_pretty})
    - Set({build::compiler/redox_attr_parsing})
    - Set({build::compiler/redox_baked_icu_data})
    - Set({build::compiler/redox_borrowck})
    - Set({build::compiler/redox_builtin_macros})
    - Set({build::compiler/redox_codegen_llvm})
    - Set({build::compiler/redox_codegen_ssa})
    - Set({build::compiler/redox_const_eval})
    - Set({build::compiler/redox_data_structures})
    - Set({build::compiler/redox_driver})
    - Set({build::compiler/redox_driver_impl})
    - Set({build::compiler/redox_error_codes})
    - Set({build::compiler/redox_error_messages})
    - Set({build::compiler/redox_errors})
    - Set({build::compiler/redox_expand})
    - Set({build::compiler/redox_feature})
    - Set({build::compiler/redox_fs_util})
    - Set({build::compiler/redox_graphviz})
    - Set({build::compiler/redox_hashes})
    - Set({build::compiler/redox_hir})
    - Set({build::compiler/redox_hir_analysis})
    - Set({build::compiler/redox_hir_id})
    - Set({build::compiler/redox_hir_pretty})
    - Set({build::compiler/redox_hir_typeck})
    - Set({build::compiler/redox_incremental})
    - Set({build::compiler/redox_index})
    - Set({build::compiler/redox_index_macros})
    - Set({build::compiler/redox_infer})
    - Set({build::compiler/redox_interface})
    - Set({build::compiler/redox_lexer})
    - Set({build::compiler/redox_lint})
    - Set({build::compiler/redox_lint_defs})
    - Set({build::compiler/redox_llvm})
    - Set({build::compiler/redox_log})
    - Set({build::compiler/redox_macros})
    - Set({build::compiler/redox_metadata})
    - Set({build::compiler/redox_middle})
    - Set({build::compiler/redox_mir_build})
    - Set({build::compiler/redox_mir_dataflow})
    - Set({build::compiler/redox_mir_transform})
    - Set({build::compiler/redox_monomorphize})
    - Set({build::compiler/redox_next_trait_solver})
    - Set({build::compiler/redox_parse})
    - Set({build::compiler/redox_parse_format})
    - Set({build::compiler/redox_passes})
    - Set({build::compiler/redox_pattern_analysis})
    - Set({build::compiler/redox_privacy})
    - Set({build::compiler/redox_proc_macro})
    - Set({build::compiler/redox_public})
    - Set({build::compiler/redox_public_bridge})
    - Set({build::compiler/redox_query_impl})
    - Set({build::compiler/redox_resolve})
    - Set({build::compiler/redox_sanitizers})
    - Set({build::compiler/redox_serialize})
    - Set({build::compiler/redox_session})
    - Set({build::compiler/redox_span})
    - Set({build::compiler/redox_symbol_mangling})
    - Set({build::compiler/redox_target})
    - Set({build::compiler/redox_thread_pool})
    - Set({build::compiler/redox_trait_selection})
    - Set({build::compiler/redox_traits})
    - Set({build::compiler/redox_transmute})
    - Set({build::compiler/redox_ty_utils})
    - Set({build::compiler/redox_type_ir})
    - Set({build::compiler/redox_type_ir_macros})
    - Set({build::compiler/redox_windows_rc})
[Build] compile::Assemble
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler})
    - Set({build::compiler/redox})
