src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_rustc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build rustc
---
[Build] compile::Assemble
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/redox})
