src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_compiler.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check compiler
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler})
    - Set({check::compiler/redox})
    - Set({check::compiler/redox_abi})
    - Set({check::compiler/redox_arena})
    - Set({check::compiler/redox_ast})
    - Set({check::compiler/redox_ast_ir})
    - Set({check::compiler/redox_ast_lowering})
    - Set({check::compiler/redox_ast_passes})
    - Set({check::compiler/redox_ast_pretty})
    - Set({check::compiler/redox_attr_parsing})
    - Set({check::compiler/redox_baked_icu_data})
    - Set({check::compiler/redox_borrowck})
    - Set({check::compiler/redox_builtin_macros})
    - Set({check::compiler/redox_codegen_llvm})
    - Set({check::compiler/redox_codegen_ssa})
    - Set({check::compiler/redox_const_eval})
    - Set({check::compiler/redox_data_structures})
    - Set({check::compiler/redox_driver})
    - Set({check::compiler/redox_driver_impl})
    - Set({check::compiler/redox_error_codes})
    - Set({check::compiler/redox_error_messages})
    - Set({check::compiler/redox_errors})
    - Set({check::compiler/redox_expand})
    - Set({check::compiler/redox_feature})
    - Set({check::compiler/redox_fs_util})
    - Set({check::compiler/redox_graphviz})
    - Set({check::compiler/redox_hashes})
    - Set({check::compiler/redox_hir})
    - Set({check::compiler/redox_hir_analysis})
    - Set({check::compiler/redox_hir_id})
    - Set({check::compiler/redox_hir_pretty})
    - Set({check::compiler/redox_hir_typeck})
    - Set({check::compiler/redox_incremental})
    - Set({check::compiler/redox_index})
    - Set({check::compiler/redox_index_macros})
    - Set({check::compiler/redox_infer})
    - Set({check::compiler/redox_interface})
    - Set({check::compiler/redox_lexer})
    - Set({check::compiler/redox_lint})
    - Set({check::compiler/redox_lint_defs})
    - Set({check::compiler/redox_llvm})
    - Set({check::compiler/redox_log})
    - Set({check::compiler/redox_macros})
    - Set({check::compiler/redox_metadata})
    - Set({check::compiler/redox_middle})
    - Set({check::compiler/redox_mir_build})
    - Set({check::compiler/redox_mir_dataflow})
    - Set({check::compiler/redox_mir_transform})
    - Set({check::compiler/redox_monomorphize})
    - Set({check::compiler/redox_next_trait_solver})
    - Set({check::compiler/redox_parse})
    - Set({check::compiler/redox_parse_format})
    - Set({check::compiler/redox_passes})
    - Set({check::compiler/redox_pattern_analysis})
    - Set({check::compiler/redox_privacy})
    - Set({check::compiler/redox_proc_macro})
    - Set({check::compiler/redox_public})
    - Set({check::compiler/redox_public_bridge})
    - Set({check::compiler/redox_query_impl})
    - Set({check::compiler/redox_resolve})
    - Set({check::compiler/redox_sanitizers})
    - Set({check::compiler/redox_serialize})
    - Set({check::compiler/redox_session})
    - Set({check::compiler/redox_span})
    - Set({check::compiler/redox_symbol_mangling})
    - Set({check::compiler/redox_target})
    - Set({check::compiler/redox_thread_pool})
    - Set({check::compiler/redox_trait_selection})
    - Set({check::compiler/redox_traits})
    - Set({check::compiler/redox_transmute})
    - Set({check::compiler/redox_ty_utils})
    - Set({check::compiler/redox_type_ir})
    - Set({check::compiler/redox_type_ir_macros})
    - Set({check::compiler/redox_windows_rc})
