src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_rustc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check rustc
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler/redox})
