src/bootstrap/src/core/builder/cli_paths/snapshots/x_clippy.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: clippy
---
[Clippy] clippy::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({clippy::library})
    - Set({clippy::library/alloc})
    - Set({clippy::library/compiler-builtins/compiler-builtins})
    - Set({clippy::library/core})
    - Set({clippy::library/panic_abort})
    - Set({clippy::library/panic_unwind})
    - Set({clippy::library/proc_macro})
    - Set({clippy::library/rustc-std-workspace-core})
    - Set({clippy::library/std})
    - Set({clippy::library/std_detect})
    - Set({clippy::library/sysroot})
    - Set({clippy::library/test})
    - Set({clippy::library/unwind})
[Clippy] clippy::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({clippy::compiler})
    - Set({clippy::compiler/redox})
    - Set({clippy::compiler/redox_abi})
    - Set({clippy::compiler/redox_arena})
    - Set({clippy::compiler/redox_ast})
    - Set({clippy::compiler/redox_ast_ir})
    - Set({clippy::compiler/redox_ast_lowering})
    - Set({clippy::compiler/redox_ast_passes})
    - Set({clippy::compiler/redox_ast_pretty})
    - Set({clippy::compiler/redox_attr_parsing})
    - Set({clippy::compiler/redox_baked_icu_data})
    - Set({clippy::compiler/redox_borrowck})
    - Set({clippy::compiler/redox_builtin_macros})
    - Set({clippy::compiler/redox_codegen_llvm})
    - Set({clippy::compiler/redox_codegen_ssa})
    - Set({clippy::compiler/redox_const_eval})
    - Set({clippy::compiler/redox_data_structures})
    - Set({clippy::compiler/redox_driver})
    - Set({clippy::compiler/redox_driver_impl})
    - Set({clippy::compiler/redox_error_codes})
    - Set({clippy::compiler/redox_error_messages})
    - Set({clippy::compiler/redox_errors})
    - Set({clippy::compiler/redox_expand})
    - Set({clippy::compiler/redox_feature})
    - Set({clippy::compiler/redox_fs_util})
    - Set({clippy::compiler/redox_graphviz})
    - Set({clippy::compiler/redox_hashes})
    - Set({clippy::compiler/redox_hir})
    - Set({clippy::compiler/redox_hir_analysis})
    - Set({clippy::compiler/redox_hir_id})
    - Set({clippy::compiler/redox_hir_pretty})
    - Set({clippy::compiler/redox_hir_typeck})
    - Set({clippy::compiler/redox_incremental})
    - Set({clippy::compiler/redox_index})
    - Set({clippy::compiler/redox_index_macros})
    - Set({clippy::compiler/redox_infer})
    - Set({clippy::compiler/redox_interface})
    - Set({clippy::compiler/redox_lexer})
    - Set({clippy::compiler/redox_lint})
    - Set({clippy::compiler/redox_lint_defs})
    - Set({clippy::compiler/redox_llvm})
    - Set({clippy::compiler/redox_log})
    - Set({clippy::compiler/redox_macros})
    - Set({clippy::compiler/redox_metadata})
    - Set({clippy::compiler/redox_middle})
    - Set({clippy::compiler/redox_mir_build})
    - Set({clippy::compiler/redox_mir_dataflow})
    - Set({clippy::compiler/redox_mir_transform})
    - Set({clippy::compiler/redox_monomorphize})
    - Set({clippy::compiler/redox_next_trait_solver})
    - Set({clippy::compiler/redox_parse})
    - Set({clippy::compiler/redox_parse_format})
    - Set({clippy::compiler/redox_passes})
    - Set({clippy::compiler/redox_pattern_analysis})
    - Set({clippy::compiler/redox_privacy})
    - Set({clippy::compiler/redox_proc_macro})
    - Set({clippy::compiler/redox_public})
    - Set({clippy::compiler/redox_public_bridge})
    - Set({clippy::compiler/redox_query_impl})
    - Set({clippy::compiler/redox_resolve})
    - Set({clippy::compiler/redox_sanitizers})
    - Set({clippy::compiler/redox_serialize})
    - Set({clippy::compiler/redox_session})
    - Set({clippy::compiler/redox_span})
    - Set({clippy::compiler/redox_symbol_mangling})
    - Set({clippy::compiler/redox_target})
    - Set({clippy::compiler/redox_thread_pool})
    - Set({clippy::compiler/redox_trait_selection})
    - Set({clippy::compiler/redox_traits})
    - Set({clippy::compiler/redox_transmute})
    - Set({clippy::compiler/redox_ty_utils})
    - Set({clippy::compiler/redox_type_ir})
    - Set({clippy::compiler/redox_type_ir_macros})
    - Set({clippy::compiler/redox_windows_rc})
