src/bootstrap/src/core/builder/cli_paths/snapshots/x_fix.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: fix
---
[Fix] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::compiler})
    - Set({fix::compiler/redox})
    - Set({fix::compiler/redox_abi})
    - Set({fix::compiler/redox_arena})
    - Set({fix::compiler/redox_ast})
    - Set({fix::compiler/redox_ast_ir})
    - Set({fix::compiler/redox_ast_lowering})
    - Set({fix::compiler/redox_ast_passes})
    - Set({fix::compiler/redox_ast_pretty})
    - Set({fix::compiler/redox_attr_parsing})
    - Set({fix::compiler/redox_baked_icu_data})
    - Set({fix::compiler/redox_borrowck})
    - Set({fix::compiler/redox_builtin_macros})
    - Set({fix::compiler/redox_codegen_llvm})
    - Set({fix::compiler/redox_codegen_ssa})
    - Set({fix::compiler/redox_const_eval})
    - Set({fix::compiler/redox_data_structures})
    - Set({fix::compiler/redox_driver})
    - Set({fix::compiler/redox_driver_impl})
    - Set({fix::compiler/redox_error_codes})
    - Set({fix::compiler/redox_error_messages})
    - Set({fix::compiler/redox_errors})
    - Set({fix::compiler/redox_expand})
    - Set({fix::compiler/redox_feature})
    - Set({fix::compiler/redox_fs_util})
    - Set({fix::compiler/redox_graphviz})
    - Set({fix::compiler/redox_hashes})
    - Set({fix::compiler/redox_hir})
    - Set({fix::compiler/redox_hir_analysis})
    - Set({fix::compiler/redox_hir_id})
    - Set({fix::compiler/redox_hir_pretty})
    - Set({fix::compiler/redox_hir_typeck})
    - Set({fix::compiler/redox_incremental})
    - Set({fix::compiler/redox_index})
    - Set({fix::compiler/redox_index_macros})
    - Set({fix::compiler/redox_infer})
    - Set({fix::compiler/redox_interface})
    - Set({fix::compiler/redox_lexer})
    - Set({fix::compiler/redox_lint})
    - Set({fix::compiler/redox_lint_defs})
    - Set({fix::compiler/redox_llvm})
    - Set({fix::compiler/redox_log})
    - Set({fix::compiler/redox_macros})
    - Set({fix::compiler/redox_metadata})
    - Set({fix::compiler/redox_middle})
    - Set({fix::compiler/redox_mir_build})
    - Set({fix::compiler/redox_mir_dataflow})
    - Set({fix::compiler/redox_mir_transform})
    - Set({fix::compiler/redox_monomorphize})
    - Set({fix::compiler/redox_next_trait_solver})
    - Set({fix::compiler/redox_parse})
    - Set({fix::compiler/redox_parse_format})
    - Set({fix::compiler/redox_passes})
    - Set({fix::compiler/redox_pattern_analysis})
    - Set({fix::compiler/redox_privacy})
    - Set({fix::compiler/redox_proc_macro})
    - Set({fix::compiler/redox_public})
    - Set({fix::compiler/redox_public_bridge})
    - Set({fix::compiler/redox_query_impl})
    - Set({fix::compiler/redox_resolve})
    - Set({fix::compiler/redox_sanitizers})
    - Set({fix::compiler/redox_serialize})
    - Set({fix::compiler/redox_session})
    - Set({fix::compiler/redox_span})
    - Set({fix::compiler/redox_symbol_mangling})
    - Set({fix::compiler/redox_target})
    - Set({fix::compiler/redox_thread_pool})
    - Set({fix::compiler/redox_trait_selection})
    - Set({fix::compiler/redox_traits})
    - Set({fix::compiler/redox_transmute})
    - Set({fix::compiler/redox_ty_utils})
    - Set({fix::compiler/redox_type_ir})
    - Set({fix::compiler/redox_type_ir_macros})
    - Set({fix::compiler/redox_windows_rc})
[Fix] check::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/librustdoc})
    - Set({fix::src/tools/rustdoc})
[Fix] check::CraneliftCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::cg_clif})
    - Set({fix::redox_codegen_cranelift})
[Fix] check::GccCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::cg_gcc})
    - Set({fix::redox_codegen_gcc})
[Fix] check::Clippy
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/clippy})
[Fix] check::Miri
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miri})
[Fix] check::CargoMiri
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miri/cargo-miri})
[Fix] check::MiroptTestTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miropt-test-tools})
[Fix] check::Rustfmt
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/rustfmt})
[Fix] check::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/rust-analyzer})
[Fix] check::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/test-float-parse})
[Fix] check::FeaturesStatusDump
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/features-status-dump})
[Fix] check::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({fix::library})
    - Set({fix::library/alloc})
    - Set({fix::library/alloctests})
    - Set({fix::library/compiler-builtins/compiler-builtins})
    - Set({fix::library/core})
    - Set({fix::library/coretests})
    - Set({fix::library/panic_abort})
    - Set({fix::library/panic_unwind})
    - Set({fix::library/proc_macro})
    - Set({fix::library/rustc-std-workspace-core})
    - Set({fix::library/std})
    - Set({fix::library/std_detect})
    - Set({fix::library/sysroot})
    - Set({fix::library/test})
    - Set({fix::library/unwind})
