src/bootstrap/src/core/builder/cli_paths/snapshots/x_install.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: install
---
[Install] install::Docs
    targets: [aarch64-unknown-linux-gnu]
    - Set({install::src/doc})
[Install] install::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({install::library/std})
[Install] install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::compiler/redox})
[Install] install::LlvmTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({install::llvm-tools})
